Fix row spacing on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -82,10 +82,6 @@
 	color: white !important;
 }
 
-.margin-top-25 {
-	margin-top: 25px;
-}
-
 .contact-container {
 	background: rgba(30, 0, 60, 0.5); 
 	padding: 25px;
@@ -127,6 +123,12 @@
     	background-color: #337ab7;
     	border-color: #2e6da4;
 	}
+  .margin-top-25 {
+    margin-top: 25px;
+  }
+  .article-link {
+    margin-top: 25px;
+  }
 }
 /* line 34, ../sass/home.sass */
 .mission .circle {
